libs/@local/hashql/ast/tests/ui/lowering/special-form-expander/use-4.jsonc
//@ run: fail
//@ description: use/4 should error out
[
  "::kernel::special_form::use",
  "::math",
  { "#tuple": ["pi"] },
  "x",
  "y"
  //~^ ERROR Remove this argument
]
